cmake_minimum_required (VERSION 3.11)
if(UNIX AND NOT APPLE)
    set(LINUX TRUE)
endif()

if(WIN32)
message("WIN32 platform")
message("${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
elseif(APPLE)
message("APPLE platform")
elseif(LINUX)
message("LINUX platform")
#set(CMAKE_C_COMPILER "/usr/local/gcc/bin/gcc")
#set(CMAKE_CXX_COMPILER "/usr/local/gcc/bin/g++")
elseif(UNIX)
message("UNIX platform")
else()
message("unknown platform")
endif()

#set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project (cpp)

if(WIN32)

SET(CMAKE_INSTALL_PREFIX "D:/program/cpp")

ADD_DEFINITIONS(-DCMAKE_BUILD_TYPE=DEBUG)
include_directories("D:/program/boost_1_78_0/include/boost-1_78")
LINK_DIRECTORIES("D:/program/boost_1_78_0/lib")
include_directories("D:/program/openssl/include")
LINK_DIRECTORIES("D:/program/openssl/lib")
include_directories("D:/program/ffmpeg-4.4.1/include")
LINK_DIRECTORIES("D:/program/ffmpeg-4.4.1/lib")
include_directories("D:/program/opencv_4_5_4/include")
LINK_DIRECTORIES("D:/program/opencv_4_5_4/x64/vc17/lib")
include_directories("D:/program/gtest/x64-Debug/include")
link_directories("D:/program/gtest/x64-Debug/lib")
include_directories("D:/program/pjsip/include")
link_directories("D:/program/pjsip/lib")
include_directories("D:/program/jsoncpp/include")
link_directories("D:/program/jsoncpp/lib")

include_directories("D:\\program\\bcg729\\include")
LINK_DIRECTORIES("D:\\program\\bcg729\\lib")
include_directories("D:\\Program Files (x86)\\OpenAL 1.1 SDK\\include")
LINK_DIRECTORIES("D:\\Program Files (x86)\\OpenAL 1.1 SDK\\libs\\Win64")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /wd4430")
add_definitions(-DWIN32_LEAN_AND_MEAN)

elseif(APPLE)

SET(CMAKE_INSTALL_PREFIX "/usr/local/3rd/cpp")

include_directories("/usr/local/3rd/mysql/include")
LINK_DIRECTORIES(/usr/local/3rd/mysql/lib64)
include_directories("/usr/local/3rd/boost_1_72_0/include")
LINK_DIRECTORIES(/usr/local/3rd/boost_1_72_0/lib)
include_directories("/usr/local/3rd/opencv_4_1_2/include")
include_directories("/usr/local/3rd/opencv_4_1_2/include/opencv4")
LINK_DIRECTORIES(/usr/local/3rd/opencv_4_1_2/lib)
LINK_DIRECTORIES(/usr/local/3rd/opencv_4_1_2/lib/opencv4/3rdparty/)
include_directories("/usr/local/opt/openssl/include")
LINK_DIRECTORIES(/usr/local/opt/openssl/lib)
include_directories("/usr/local/include")
LINK_DIRECTORIES(/usr/local/lib)
include_directories("/usr/local/3rd/ffmpeg_4_1/include")
LINK_DIRECTORIES(/usr/local/3rd/ffmpeg_4_1/lib)
include_directories("/usr/local/3rd/pjsip/include")
LINK_DIRECTORIES(/usr/local/3rd/pjsip/lib)
include_directories("/usr/local/3rd/gtest/include")
LINK_DIRECTORIES(/usr/local/3rd/gtest/lib)

elseif(LINUX)

SET(CMAKE_INSTALL_PREFIX "/usr/local/3rd/cpp")

link_directories(/usr/lib64)

include_directories(/root/app/vcpkg/installed/x64-linux/include)
LINK_DIRECTORIES(/root/app/vcpkg/installed/x64-linux/debug/lib)
LINK_DIRECTORIES(/root/app/vcpkg/installed/x64-linux/debug/lib/manual-link)
include_directories("/usr/local/3rd/boost_1_72_0/include")
LINK_DIRECTORIES(/usr/local/3rd/boost_1_72_0/lib)
include_directories("/usr/local/3rd/opencv_4_1_2/include/opencv4")
LINK_DIRECTORIES(/usr/local/3rd/opencv_4_1_2/lib)
LINK_DIRECTORIES(/usr/local/3rd/opencv_4_1_2/lib/opencv4/3rdparty)
include_directories(/usr/local/3rd/mysql/include)
LINK_DIRECTORIES(/usr/local/3rd/mysql/lib64/debug)
include_directories(/usr/local/3rd/jsoncpp/include)
LINK_DIRECTORIES(/usr/local/3rd/jsoncpp/lib)
include_directories(/usr/local/3rd/openssl/include)
LINK_DIRECTORIES(/usr/local/3rd/openssl/lib)
include_directories("/usr/local/3rd/pjsip/include")
LINK_DIRECTORIES(/usr/local/3rd/pjsip/lib)
include_directories("/usr/local/3rd/gtest/include")
LINK_DIRECTORIES(/usr/local/3rd/gtest/lib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -O0 -ggdb")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-Bstatic -lstdc++ -Wl,-Bdynamic")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--whole-archive -lpthread -Wl,--no-whole-archive")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
else()
endif()

ADD_DEFINITIONS(-DBOOST_UUID_RANDOM_PROVIDER_FORCE_POSIX -DBOOST_ASIO_DISABLE_SMALL_BLOCK_RECYCLING)

if(WIN32)
else()
set(enable_database TRUE)
set(enable_redis TRUE)
endif()

set(enable_jsoncc TRUE)
set(enable_ossl TRUE)
set(enable_base64 TRUE)
set(enable_httpclient TRUE)
set(enable_httpserver TRUE)
set(enable_wsclient TRUE)
set(enable_wsserver TRUE)
#set(enable_sipserver TRUE)

add_subdirectory(src)
