if(enable_database)
set(MODULE_NAME database)
file(GLOB_RECURSE SRC_LIST *.h *.cpp)
#add_library(${MODULE_NAME} SHARED ${SRC_LIST})
add_library(${MODULE_NAME} ${SRC_LIST})
if(WIN32)
TARGET_LINK_LIBRARIES(${MODULE_NAME} mysqlcppconn8-static resolv)
else()
TARGET_LINK_LIBRARIES(${MODULE_NAME} mysqlcppconn8-static resolv)
endif()
INSTALL(TARGETS ${MODULE_NAME} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
endif()
